// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`스냅샷 — 네 크기 2x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 2,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 2,
      }
    }
    testID="widget-weekly-boss-profit"
  >
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      이번 주
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#241208",
        }
      }
      testID="profit-amount"
    >
      <Text
        style={
          {
            "color": "#241208",
            "fontSize": 20,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "800",
          }
        }
      >
        40.0억
      </Text>
      <Text
        style={
          {
            "color": "#645C42",
            "fontSize": 11,
            "fontWeight": "600",
          }
        }
      >
         메소
      </Text>
    </Text>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 2x2 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 8,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 8,
      }
    }
    testID="widget-weekly-boss-profit"
  >
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#645C42",
            "fontSize": 11,
            "fontWeight": "700",
          }
        }
      >
        이번 주
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#241208",
          }
        }
        testID="profit-amount"
      >
        <Text
          style={
            {
              "color": "#241208",
              "fontSize": 22,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "800",
            }
          }
        >
          40.0억
        </Text>
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
           메소
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "columnGap": 6,
          "rowGap": 6,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "flexDirection": "row",
            "height": 6,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="profit-stack-bar"
      >
        <View
          style={
            {
              "backgroundColor": "#F58B0F",
              "height": 6,
              "width": "80%",
            }
          }
          testID="profit-fill-crystal"
        />
        <View
          style={
            {
              "backgroundColor": "#CA763A",
              "height": 6,
              "width": "20%",
            }
          }
          testID="profit-fill-item"
        />
      </View>
      <View
        style={
          {
            "columnGap": 2,
            "rowGap": 2,
          }
        }
        testID="profit-breakdown"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 4,
              "flexDirection": "row",
              "rowGap": 4,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#F58B0F",
                "borderRadius": 9999,
                "height": 6,
                "width": 6,
              }
            }
          />
          <Text
            style={
              {
                "color": "#645C42",
                "fontSize": 10,
              }
            }
          >
            결정석
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "600",
              }
            }
          >
            32.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 4,
              "flexDirection": "row",
              "rowGap": 4,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#CA763A",
                "borderRadius": 9999,
                "height": 6,
                "width": 6,
              }
            }
          />
          <Text
            style={
              {
                "color": "#645C42",
                "fontSize": 10,
              }
            }
          >
            아이템
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "600",
              }
            }
          >
            8.0억
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 4x2 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 12,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "padding": 12,
        "rowGap": 12,
      }
    }
    testID="widget-weekly-boss-profit"
  >
    <View
      style={
        {
          "columnGap": 8,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "rowGap": 8,
        }
      }
    >
      <View
        style={
          {
            "columnGap": 2,
            "rowGap": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 11,
              "fontWeight": "700",
            }
          }
        >
          이번 주
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#241208",
            }
          }
          testID="profit-amount"
        >
          <Text
            style={
              {
                "color": "#241208",
                "fontSize": 24,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "800",
              }
            }
          >
            40.0억
          </Text>
          <Text
            style={
              {
                "color": "#645C42",
                "fontSize": 11,
                "fontWeight": "600",
              }
            }
          >
             메소
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "columnGap": 6,
            "rowGap": 6,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#E4E1CE",
              "borderRadius": 9999,
              "flexDirection": "row",
              "height": 6,
              "overflow": "hidden",
              "width": "100%",
            }
          }
          testID="profit-stack-bar"
        >
          <View
            style={
              {
                "backgroundColor": "#F58B0F",
                "height": 6,
                "width": "80%",
              }
            }
            testID="profit-fill-crystal"
          />
          <View
            style={
              {
                "backgroundColor": "#CA763A",
                "height": 6,
                "width": "20%",
              }
            }
            testID="profit-fill-item"
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 12,
              "flexDirection": "row",
              "rowGap": 12,
            }
          }
          testID="profit-breakdown"
        >
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 4,
                "flexDirection": "row",
                "rowGap": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#F58B0F",
                  "borderRadius": 9999,
                  "height": 6,
                  "width": 6,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#645C42",
                  "fontSize": 10,
                }
              }
            >
              결정석
            </Text>
            <Text
              style={
                {
                  "color": "#241208",
                  "fontSize": 10,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                }
              }
            >
              32.0억
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 4,
                "flexDirection": "row",
                "rowGap": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#CA763A",
                  "borderRadius": 9999,
                  "height": 6,
                  "width": 6,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#645C42",
                  "fontSize": 10,
                }
              }
            >
              아이템
            </Text>
            <Text
              style={
                {
                  "color": "#241208",
                  "fontSize": 10,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                }
              }
            >
              8.0억
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "justifyContent": "center",
          "width": "42%",
        }
      }
    >
      <View
        testID="profit-characters"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            가
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            25.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            나
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            13.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            다
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            2.0억
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 4x3 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 8,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "padding": 14,
        "rowGap": 8,
      }
    }
    testID="widget-weekly-boss-profit"
  >
    <View
      style={
        {
          "columnGap": 4,
          "rowGap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "columnGap": 8,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "rowGap": 8,
          }
        }
        testID="profit-period-header"
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 11,
              "fontWeight": "700",
            }
          }
        >
          이번 주
           보스 수익
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "flexShrink": 1,
              "fontSize": 10,
            }
          }
          testID="profit-period-range"
        >
          8월 14일 ~ 8월 20일
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#241208",
          }
        }
        testID="profit-amount"
      >
        <Text
          style={
            {
              "color": "#241208",
              "fontSize": 32,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "800",
            }
          }
        >
          40.0억
        </Text>
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 11,
              "fontWeight": "600",
            }
          }
        >
           메소
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "columnGap": 6,
          "rowGap": 6,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "flexDirection": "row",
            "height": 12,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="profit-stack-bar"
      >
        <View
          style={
            {
              "backgroundColor": "#F58B0F",
              "height": 6,
              "width": "80%",
            }
          }
          testID="profit-fill-crystal"
        />
        <View
          style={
            {
              "backgroundColor": "#CA763A",
              "height": 6,
              "width": "20%",
            }
          }
          testID="profit-fill-item"
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
        testID="profit-breakdown"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 4,
              "flexDirection": "row",
              "rowGap": 4,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#F58B0F",
                "borderRadius": 9999,
                "height": 6,
                "width": 6,
              }
            }
          />
          <Text
            style={
              {
                "color": "#645C42",
                "fontSize": 10,
              }
            }
          >
            결정석
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "600",
              }
            }
          >
            32.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 4,
              "flexDirection": "row",
              "rowGap": 4,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#CA763A",
                "borderRadius": 9999,
                "height": 6,
                "width": 6,
              }
            }
          />
          <Text
            style={
              {
                "color": "#645C42",
                "fontSize": 10,
              }
            }
          >
            아이템
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "600",
              }
            }
          >
            8.0억
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "borderColor": "#CFC9AE",
          "borderTopWidth": 1,
          "marginTop": 4,
          "paddingTop": 8,
        }
      }
    >
      <View
        testID="profit-characters"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            style={
              {
                "color": "#9A9070",
                "flexShrink": 0,
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
                "width": 10,
              }
            }
            testID="profit-character-rank"
          >
            1
          </Text>
          <View
            style={
              {
                "borderRadius": 9999,
                "flexShrink": 0,
                "height": 26,
                "overflow": "hidden",
                "width": 26,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#F58B0F",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
              testID="profit-character-face-fallback"
            >
              <Text
                style={
                  {
                    "color": "#FFEEE2",
                    "fontSize": 9,
                    "fontWeight": "700",
                  }
                }
              >
                ?
              </Text>
            </View>
          </View>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            가
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#645C42",
                "flexShrink": 0,
                "fontSize": 10,
              }
            }
            testID="profit-character-split"
          >
            결정석 20.0억 · 아이템 5.0억
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            25.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            style={
              {
                "color": "#9A9070",
                "flexShrink": 0,
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
                "width": 10,
              }
            }
            testID="profit-character-rank"
          >
            2
          </Text>
          <View
            style={
              {
                "borderRadius": 9999,
                "flexShrink": 0,
                "height": 26,
                "overflow": "hidden",
                "width": 26,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#F58B0F",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
              testID="profit-character-face-fallback"
            >
              <Text
                style={
                  {
                    "color": "#FFEEE2",
                    "fontSize": 9,
                    "fontWeight": "700",
                  }
                }
              >
                ?
              </Text>
            </View>
          </View>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            나
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#645C42",
                "flexShrink": 0,
                "fontSize": 10,
              }
            }
            testID="profit-character-split"
          >
            결정석 10.0억 · 아이템 3.0억
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            13.0억
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "paddingBottom": 4,
              "paddingTop": 4,
              "rowGap": 8,
            }
          }
          testID="profit-character-row"
        >
          <Text
            style={
              {
                "color": "#9A9070",
                "flexShrink": 0,
                "fontSize": 10,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
                "width": 10,
              }
            }
            testID="profit-character-rank"
          >
            3
          </Text>
          <View
            style={
              {
                "borderRadius": 9999,
                "flexShrink": 0,
                "height": 26,
                "overflow": "hidden",
                "width": 26,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#F58B0F",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
              testID="profit-character-face-fallback"
            >
              <Text
                style={
                  {
                    "color": "#FFEEE2",
                    "fontSize": 9,
                    "fontWeight": "700",
                  }
                }
              >
                ?
              </Text>
            </View>
          </View>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 11.5,
                "fontWeight": "600",
              }
            }
            testID="profit-character-name"
          >
            다
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#645C42",
                "flexShrink": 0,
                "fontSize": 10,
              }
            }
            testID="profit-character-split"
          >
            결정석 2.0억 · 아이템 0
          </Text>
          <Text
            style={
              {
                "color": "#241208",
                "flexShrink": 0,
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
          >
            2.0억
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
